# asio_test

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
cmake/: static_c_runtime_overrides.cmake  static_cxx_runtime_overrides.cmake
scripts/appveyor/: build.ps1  environment.ps1  install.ps1  test.ps1
scripts/travis/: build.sh  install.sh
src/: main.cpp
src/acceptor_cancel_test/: CMakeLists.txt  README.md
src/acceptor_cancel_test/src/: main.cpp
src/latch/: CMakeLists.txt
src/latch/include/: latch.hpp
src/latch/src/: latch.cpp
src/strand/: CMakeLists.txt
src/strand/src/: main.cpp
src/strand_test/: CMakeLists.txt  README.md
src/strand_test/src/: main.cpp
